Add authorize page

--- a/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Connect/Signin">Sign in</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Connect/Authorize">Authorize</a>
                         </li>
                     </ul>
                 </div>
