Add application seeder

--- a/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Connect/Authorize"
-                               asp-route-client_id="oidc_certification_app_1"
-                               asp-route-redirect_uri="https://www.certification.openid.net/test/a/d6e0d2a6-003e-4721-8b67-a24380468aa8/callback"
+                               asp-route-client_id="energy-origin"
+                               asp-route-redirect_uri="https://localhost:7124"
                                asp-route-response_type="code"
                                asp-route-scope="openid profile"
                                asp-route-state="c6770cf5939c4db9bd293b189c2d0107"
