--- a/domains/mock-oidc/Mock.Oidc/Pages/Index.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Index.cshtml
@@ -6,5 +6,12 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@if (Request.Query.ContainsKey("code"))
+{
+    <div>
+        <h2>Code</h2>
+        <p>@Request.Query["code"]</p>
+    </div>
+}
