--- a/domains/mock-oidc/Mock.Oidc/Pages/Connect/Signin.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Connect/Signin.cshtml
@@ -15,4 +15,8 @@
         <button name="username" value="Charlotte" type="submit">Sign in as Charlotte</button>
         <button name="username" value="Not-Charlotte" type="submit">Sign in as Not-Charlotte</button>
     </form>
+    
+    <form asp-page="Logout" asp-antiforgery="true" method="post">
+        <button type="submit">Log out</button>
+    </form>
 </div>
