--- a/domains/mock-oidc/Mock.Oidc/Pages/Connect/Signin.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Connect/Signin.cshtml
@@ -10,10 +10,12 @@
     {
         <p>You are signed in as @User.Identity.Name!</p>
     }
-
+    
     <form asp-antiforgery="true" method="post">
-        <button name="username" value="Charlotte" type="submit">Sign in as Charlotte</button>
-        <button name="username" value="Not-Charlotte" type="submit">Sign in as Not-Charlotte</button>
+        @foreach (var user in Model.Users)
+        {
+            <button name="subject" value="@user.Subject" type="submit">Sign in as @user.Name (@user.Description)</button>
+        }
     </form>
     
     <form asp-page="Logout" asp-antiforgery="true" method="post">
