Add scopes: nemid mitid ssn

--- a/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                                asp-route-client_id="energy-origin"
                                asp-route-redirect_uri="https://localhost:7124"
                                asp-route-response_type="code"
-                               asp-route-scope="openid profile"
+                               asp-route-scope="openid nemid mitid ssn"
                                asp-route-state="c6770cf5939c4db9bd293b189c2d0107"
                                asp-route-code_challenge="da5apBQRrEqOVKxhNQ82fqG6EdRcDlpKKU_baV63nu0"
                                asp-route-code_challenge_method="S256"
