Apply style sheet

--- a/domains/mock-oidc/Mock.Oidc/Mock/Pages/Connect/Signin.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Mock/Pages/Connect/Signin.cshtml
@@ -5,19 +5,20 @@
 
 <div>
     <h1>Sign in</h1>
-    
-    @if (User.Identity?.IsAuthenticated ?? false)
-    {
-        <p>You are signed in as @User.Identity.Name!</p>
-    }
-    
+
     <form asp-antiforgery="true" method="post" id="user-selection-form">
         
         @foreach (var user in Model.Users)
         {
-            <button name="name" value="@user.Name" type="submit">Sign in as @user.Name (@user.Description)</button>
+            <button name="name" value="@user.Name" type="submit" class="peopleButton">
+                <img src="@user.ImageUrl"/>
+                <div>
+                    <h2>@user.Name</h2>
+                    <p>@user.Description</p>
+                    <p>Log ind</p>
+                </div>
+            </button>
         }
     </form>
-    
-    
+
 </div>
