--- a/domains/mock-oidc/Mock.Oidc/Mock/Pages/Shared/_Layout.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Mock/Pages/Shared/_Layout.cshtml
@@ -4,14 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mock.Oidc</title>
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <base href="@(Environment.GetEnvironmentVariable("BASE_HREF") ?? "/")" target="_self" />
+    <link rel="stylesheet" href="css/site.css" asp-append-version="true" />
 </head>
 <body>
+
     <header>
         <nav>
             <ul>
                 <li>
-                    <a asp-area="" asp-page="/Index">Home</a>
+                    <a href=".">Home</a>
                 </li>
                 <li>
                     <a href=".well-known/openid-configuration">OpenID Connect configuration</a>
@@ -20,10 +22,10 @@
                     <a href=".well-known/jwks">JWK</a>
                 </li>
                 <li>
-                    <a asp-area="" asp-page="/Connect/Signin">Sign in</a>
+                    <a href="Connect/Signin">Sign in</a>
                 </li>
                 <li>
-                    <a href="/Connect/Authorize?client_id=energy-origin&redirect_uri=https://localhost:7124&response_type=code&scope=openid nemid mitid ssn userinfo_token&state=c6770cf5939c4db9bd293b189c2d0107&code_challenge=da5apBQRrEqOVKxhNQ82fqG6EdRcDlpKKU_baV63nu0&code_challenge_method=S256&response_mode=query">
+                    <a href="Connect/Authorize?client_id=energy-origin&redirect_uri=https://localhost:7124&response_type=code&scope=openid nemid mitid ssn userinfo_token&state=c6770cf5939c4db9bd293b189c2d0107&code_challenge=da5apBQRrEqOVKxhNQ82fqG6EdRcDlpKKU_baV63nu0&code_challenge_method=S256&response_mode=query">
                         Authorize
                     </a>
                 </li>
