--- a/domains/mock-oidc/Mock.Oidc/Mock/Pages/Shared/_Layout.cshtml
+++ b/domains/mock-oidc/Mock.Oidc/Mock/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Mock.Oidc</title>
+    <title>@ViewData["Title"] - Energy Origin</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
