--- a/domains/oidc-mock/Oidc.Mock/Mock/Pages/Connect/Signin.cshtml
+++ b/domains/oidc-mock/Oidc.Mock/Mock/Pages/Connect/Signin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Mock.Oidc.Pages.Connect.SigninModel
+@model Oidc.Mock.Pages.Connect.SigninModel
 @{
     ViewData["Title"] = "Sign in";
 }
