--- a/domains/oidc-mock/Oidc.Mock/Mock/Pages/_ViewImports.cshtml
+++ b/domains/oidc-mock/Oidc.Mock/Mock/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Mock.Oidc
-@namespace Mock.Oidc.Pages
+﻿@using Oidc.Mock
+@namespace Oidc.Mock.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
