--- a/domains/oidc-mock/Oidc.Mock/Mock/Pages/Connect/Signin.cshtml
+++ b/domains/oidc-mock/Oidc.Mock/Mock/Pages/Connect/Signin.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model Oidc.Mock.Pages.Connect.SigninModel
 @{
     ViewData["Title"] = "Sign in";
@@ -8,7 +8,7 @@
     <h1>Sign in</h1>
 
     <form asp-antiforgery="false" method="post" id="user-selection-form">
-        
+
         @foreach (var user in Model.Users)
         {
             <button name="name" value="@user.Name" type="submit" class="peopleButton">
