--- a/domains/oidc-mock/Mock/Pages/Shared/_Layout.cshtml
+++ b/domains/oidc-mock/Mock/Pages/Shared/_Layout.cshtml
@@ -4,13 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Energy Origin</title>
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
-    <div>
-        <main role="main">
-            @RenderBody()
-        </main>
-    </div>
+    @RenderBody()
 </body>
 </html>
